--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ MGLToolsUtilities = /home/fk/MGLTools-1.5.6/MGLToolsPckgs/AutoDockTools/Utilitie
 # Path to pythonsh from MGLTools-1.5.6
 pythonsh = /home/fk/MGLTools-1.5.6/bin/pythonsh
 # Working directory, has to be accessible from every node
-workdir = /home/fk/Documents/iGEM/software/Dockr/workdir_test
+workdir = /home/fk/Documents/iGEM/software/Dockr/testing/workdir
 # Path to the executable of AutoDock Vina 
 # If vina is in $PATH
 # (which means it can be executed from the terminal by just typing "vina"),
@@ -23,9 +23,8 @@ vina = /home/fk/autodock_vina_1_1_2_linux_x86/bin/vina
 # Exhaustiveness, a good value is usually 8
 exhaustiveness=1
 # Path to receptors
-receptors = /home/fk/Documents/iGEM/software/Dockr/workdir_test 
+receptors = /home/fk/Documents/iGEM/software/Dockr/testing/receptors
 # Receptors already prepared?
-receptorsprep = false
+receptorsprep = yes
 # Path to PDB library
-library = /home/fk/Documents/iGEM/software/Dockr/workdir_test
-
+library = /home/fk/Documents/iGEM/software/Dockr/testing/library
