--- a/config.ini
+++ b/config.ini
@@ -13,8 +13,9 @@
 MGLToolsUtilities = /home/fk/MGLTools-1.5.6/MGLToolsPckgs/AutoDockTools/Utilities24
 # Path to pythonsh from MGLTools-1.5.6
 pythonsh = /home/fk/MGLTools-1.5.6/bin/pythonsh
-# Working directory, has to be accessible from every node
-workdir = /home/fk/Documents/iGEM/software/Dockr/testing/workdir
+# Working directory, has to be accessible from every node, results will be
+# written into a file here
+workdir = /home/fk/Documents/iGEM/software/Dockr/testing
 # Path to the executable of AutoDock Vina 
 # If vina is in $PATH
 # (which means it can be executed from the terminal by just typing "vina"),
