--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 ##################################################################
 #                                                                #
-# config.ini for Dockr                                           #
+# config.ini for finDrVS                                         #
 #                                                                #
 # * paths to directories always without "/" at the end           #
 #                                                                #
 ##################################################################
 
-[Dockr]
+[finDrVS]
 # Path to MGLTools-1.5.6 utilities
 # usually in MGLPATH/MGLToolsPckgs/AutoDockTools/Utilities24 where MGLPATH
 # is the installation directory of MGLTools-1.5.6
@@ -15,7 +15,7 @@ MGLToolsUtilities = /home/fk/MGLTools-1.5.6/MGLToolsPckgs/AutoDockTools/Utilitie
 pythonsh = /home/fk/MGLTools-1.5.6/bin/pythonsh
 # Working directory, has to be accessible from every node, results will be
 # written into a file here
-workdir = /home/fk/Documents/iGEM/software/Dockr/testing
+workdir = /home/fk/Documents/iGEM/software/finDrVS/testing
 # Path to the executable of AutoDock Vina 
 # If vina is in $PATH
 # (which means it can be executed from the terminal by just typing "vina"),
@@ -24,8 +24,8 @@ vina = /home/fk/autodock_vina_1_1_2_linux_x86/bin/vina
 # Exhaustiveness, a good value is usually 8
 exhaustiveness=1
 # Path to receptors
-receptors = /home/fk/Documents/iGEM/software/Dockr/testing/receptors
+receptors = /home/fk/Documents/iGEM/software/finDrVS/testing/receptors
 # Receptors already prepared?
 receptorsprep = yes
 # Path to PDB library
-library = /home/fk/Documents/iGEM/software/Dockr/testing/library
+library = /home/fk/Documents/iGEM/software/finDrVS/testing/library
